--- a/bioclim_vars.ipynb
+++ b/bioclim_vars.ipynb
@@ -1614,7 +1614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "id": "97300a17",
    "metadata": {},
    "outputs": [],
@@ -1654,7 +1654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "id": "8c34b0b6",
    "metadata": {},
    "outputs": [],
@@ -1673,7 +1673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "id": "6122ab1b",
    "metadata": {},
    "outputs": [],
@@ -1692,7 +1692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "id": "274cb04c",
    "metadata": {},
    "outputs": [],
@@ -1722,7 +1722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "id": "cb612975",
    "metadata": {},
    "outputs": [],
@@ -1741,7 +1741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "id": "27a621fb",
    "metadata": {},
    "outputs": [],
@@ -1781,7 +1781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "id": "fb850d6f",
    "metadata": {},
    "outputs": [],
@@ -1808,8 +1808,8 @@
     "    \n",
     "    # Get precipitation in warmest quarters:\n",
     "    precip_quarterly = xr.concat(precip_quarterly, dim=\"Quarter\")\n",
-    "    ds_bio18.append(precip_quarterly.isel(Quarter=warmest_quarters))\n",
-    "    ds_bio19.append(precip_quarterly.isel(Quarter=coldest_quarters))\n",
+    "    ds_bio18.append(precip_quarterly.compute().isel(Quarter=warmest_quarters.compute()))\n",
+    "    ds_bio19.append(precip_quarterly.compute().isel(Quarter=coldest_quarters.compute()))\n",
     "    \n",
     "    \n",
     "# Save:\n",
